Fix for mobile content overflowing on code blocks.

--- a/_sass/base2.scss
+++ b/_sass/base2.scss
@@ -769,7 +769,7 @@ code {
     background: #f7f7f7;
     border: 1px solid #ddd;
     border-radius: 2px;
-    white-space: nowrap
+    // white-space: nowrap
 }
 
 pre {
